welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:38: error: class Array takes type parameters
def colonne(D:Array){
              ^Array2:33: error: not found: value n
    D(pas)=T((pas + n)%(getMondeHauteur()))
                    ^Array2:38: error: class Array takes type parameters
def colonne(D:Array){
              ^