welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
	var T = getMotif()
  gauche()
  avance()
  droite()
  for (longeur <- 1 to getMondeLargeur()){
    val d = litMessage().toInt
    var D = decalage(d)
    colonne(d,D)
  } 
  avance(getMondeHauteur()-1)
  gauche()
  avance(getMondeLargeur()-1)
  droite()
}


def getMotif():Array[Color]={
  var T = new Array[Color](getMondeHauteur())
  for (pas <- 0 to (getMondeHauteur()-2)){
    T(pas)=getCouleurSol()
    avance()
  }
  T(getMondeHauteur()-1)
  recule(getMondeHauteur() - 1)
  return T
}

def decalage(d:Int):Array[Color]={
  var T = getMotif()
  var D = new Array[Color](getMondeHauteur())
  for (pas <- 0 to (getMondeHauteur() - 1)){
    D(pas)=T((pas + n)%(getMondeHauteur()))
  }
  return D
}

def colonne(D:Array){
  for (pas <- 0 to (getMondeHauteur()-1)){
    setCouleurBrosse(D(pas))
    baisseBrosse()
    leveBrosse()
    avance()
  }
}